# what

./: Cargo.toml  README.md
src/: main.rs  parse_folder.rs  parse_text.rs
