[package]
name = "what"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.8", features = ["derive"] }
tabled = "0.7.0"
bunt = "0.2.6"
fs_extra = "1.2.0"
human_bytes = "0.3.1"
hyperpolyglot = "0.1.7"
whatlang = "0.16.0"
